make sure the hero video is displayed correct size on mobile screen widths

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -245,8 +245,8 @@ body {
     /* Adjust the video styling if necessary */
     min-width: 100%;
     min-height: 100%;
-    width: auto;
-    height: auto;
+    /* width: auto;
+    height: auto; */
   }
 
   #hero {
